--- a/src/components/productList.styles.scss
+++ b/src/components/productList.styles.scss
@@ -13,6 +13,10 @@
   .list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 1rem;
+
+    @media screen and (max-width: 800px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
   }
 }
