fix moile funcionality

--- a/src/components/form-input.styles.scss
+++ b/src/components/form-input.styles.scss
@@ -47,6 +47,10 @@ $main-color: black;
     top: 10px;
     transition: 300ms ease all;
 
+    @media screen and (max-width: 800px) {
+      font-size: 10px;
+    }
+
     &.shrink {
       @include shrinkLabel();
     }
