--- a/src/components/sign-in.styles.scss
+++ b/src/components/sign-in.styles.scss
@@ -6,5 +6,19 @@
   .buttons {
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 800px) {
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .sign-in {
+    width: 40vw;
+
+    .sign-up-form {
+      font-size: 50%;
+    }
   }
 }
