--- a/src/pages/login.styles.scss
+++ b/src/pages/login.styles.scss
@@ -1,9 +1,13 @@
 .SignIn-SignUp {
-  margin-top: 150px;
   padding: 40px;
   width: 850px;
   display: flex;
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (max-width: 800px) {
+    width: 100%;
+    flex-direction: column;
+  }
 }
