--- a/src/components/custom-button.styles.scss
+++ b/src/components/custom-button.styles.scss
@@ -16,6 +16,10 @@
   display: flex;
   justify-content: center;
 
+  @media screen and (max-width: 800px) {
+    font-size: 8px;
+  }
+
   &:hover {
     background-color: white;
     color: black;
