--- a/src/components/sign-up.styles.scss
+++ b/src/components/sign-up.styles.scss
@@ -1,3 +1,13 @@
 .title {
   margin: 10px 0;
 }
+
+@media screen and (max-width: 800px) {
+  .sign-up {
+    width: 40vw;
+
+    .sign-up-form {
+      font-size: 50%;
+    }
+  }
+}
