--- a/src/pages/home.styles.scss
+++ b/src/pages/home.styles.scss
@@ -1,6 +1,6 @@
 .hero {
   min-height: calc(65vh);
-  background: url("../assets/Banner.jpg") center/cover no-repeat;
+  background: url("../assets/Banner2.jpg") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
