--- a/src/pages/home.styles.scss
+++ b/src/pages/home.styles.scss
@@ -1,8 +1,27 @@
 .hero {
-  min-height: calc(65vh);
-  background: url("../assets/Banner2.jpg") center/cover no-repeat;
+  min-height: 80vh;
+  background: url("../assets/Banner2000px.jpg") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+  .hero {
+    min-height: 70vh;
+    background: url("../assets/Banner1000px.jpg") center/cover no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .hero {
+    min-height: 65vh;
+    background: url("../assets/Banner800px.jpg") center/cover no-repeat;
+  }
+}
+@media screen and (max-width: 415px) {
+  .hero {
+    min-height: 65vh;
+    background: url("../assets/Banner415px.jpg") center/cover no-repeat;
+  }
 }
