--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@ a {
 }
 
 body {
-  font-family: "Open Sans Condensed";
-  padding: 130px 0;
+  font-family: 'Open Sans Condensed';
+  padding: 120px 0;
 }
