added box shadow to about

--- a/src/components/navbar.styles.scss
+++ b/src/components/navbar.styles.scss
@@ -133,6 +133,9 @@ header {
     .icon {
       font-size: 1.2em;
     }
+    .about {
+      box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.5);
+    }
 
     .hamburger {
       display: flex;
