--- a/src/components/custom-button.styles.scss
+++ b/src/components/custom-button.styles.scss
@@ -1,3 +1,7 @@
+$google-color: #4285f4;
+$dark-color: black;
+$google-color-hover: #357ae8;
+
 .custom-btn {
   min-width: 165px;
   width: auto;
@@ -22,8 +26,8 @@
 
   &:hover {
     background-color: white;
-    color: black;
-    border: 1px solid black;
+    color: $dark-color;
+    border: 1px solid $dark-color;
   }
 
   &.addToCartClass {
@@ -43,11 +47,11 @@
   }
 
   &.google-sign-in {
-    background-color: #4285f4;
+    background-color: $google-color;
     color: white;
 
     &:hover {
-      background-color: #357ae8;
+      background-color: $google-color-hover;
       border: none;
     }
   }
