--- a/src/components/navbar.styles.scss
+++ b/src/components/navbar.styles.scss
@@ -1,3 +1,6 @@
+$navbar-color: aqua;
+$letter-hover-color: gray;
+
 header {
   position: fixed;
   z-index: 999;
@@ -30,7 +33,7 @@ header {
   display: flex;
   margin-top: 0.75em;
   width: 100%;
-  background-color: aqua;
+  background-color: $navbar-color;
   font-size: 1.4em;
   height: 2em;
   box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.5);
@@ -48,7 +51,7 @@ header {
     transition: all 0.3s linear;
     cursor: pointer;
     &:hover {
-      color: gray;
+      color: $letter-hover-color;
     }
   }
 
@@ -73,7 +76,7 @@ header {
     margin: 0px;
     transition: all 0.3s linear;
     &:hover {
-      color: gray;
+      color: $letter-hover-color;
     }
   }
   .amount {
@@ -115,15 +118,12 @@ header {
     }
 
     .list1 {
-      background-color: #00ffff;
+      background-color: $navbar-color;
       line-height: 200%;
       text-align: left;
-      width: 100%;
+      width: 115%;
       transition: all 0.3s linear;
       z-index: 2;
-      &:hover {
-        padding-left: 0.5rem;
-      }
     }
 
     .show-links {
@@ -143,7 +143,7 @@ header {
       color: white;
       margin-left: 20px;
       &:hover {
-        color: gray;
+        color: $letter-hover-color;
       }
     }
   }
