--- a/src/components/menu-Item.styles.scss
+++ b/src/components/menu-Item.styles.scss
@@ -45,6 +45,7 @@
   .title {
     font-weight: bold;
     margin-bottom: 6px;
+    margin-top: inherit;
     font-size: 22px;
     color: #4a4a4a;
     text-transform: uppercase;
