--- a/src/components/navbar.styles.scss
+++ b/src/components/navbar.styles.scss
@@ -31,7 +31,7 @@ header {
 
 .nav-container {
   display: flex;
-  margin-top: 0.75em;
+  margin-top: 0.75rem;
   width: 100%;
   background-color: $navbar-color;
   font-size: 1.4em;
@@ -127,6 +127,7 @@ header {
     }
 
     .show-links {
+      // margin-top: inherit;
       left: 0%;
     }
 
